--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -89,8 +89,8 @@ p {
 .main-exchange--index {
     width: 100%;
     height: auto;
-    padding-top: 80px;
-    padding-bottom: 108px;
+    padding-top: 90px;
+    padding-bottom: 115px;
     text-align: center;
 }
 .main-exchange--main {
@@ -169,8 +169,9 @@ a {
 }
 footer {
     display: flex;
+    position: relative;
     width: 100%;
-    height: 80px;
+    height: 70px;
     background-color: #0A3871;
     padding: 5px;
 }
