--- a/src/assets/styles/tablet.css
+++ b/src/assets/styles/tablet.css
@@ -1,4 +1,12 @@
 .main-exchange {
-    padding-top: 10%;
-    padding-bottom: 15%;
+    padding-top: 100%;
+    padding-bottom: 100%;
+}
+
+.main-exchange--main {
+    width: 100%;
+    height: 25vw;
+    padding-top: 0px;
+    padding-bottom: 35px;
+    text-align: center;
 }
