--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -40,12 +40,13 @@ main {
     padding: 5px;
     height: 110px;
     width: 100%;
+    max-width: 600px;
 }
 textarea {
     background: transparent;
     border: none;
     width: 100%;
-    height: 60vh;
+    height: 70vh;
     margin-top: 20px;
     color: #0A3871;
     font-size: 2rem;
@@ -89,15 +90,15 @@ p {
 .main-exchange--index {
     width: 100%;
     height: auto;
-    padding-top: 90px;
-    padding-bottom: 115px;
+    padding-top: 20%;
+    padding-bottom: 35%;
     text-align: center;
 }
 .main-exchange--main {
     width: 100%;
     height: auto;
-    padding-top: 0px;
-    padding-bottom: 35px;
+    padding-top: 12%;
+    padding-bottom: 20%;
     text-align: center;
 }
 .main-container {
@@ -108,7 +109,7 @@ p {
 .main-container {
     width: 100%;
     height: auto;
-    margin: 12px auto;
+    margin: auto;
     padding: 0;
 }
 .main-container--button {
