--- a/src/assets/styles/tablet.css
+++ b/src/assets/styles/tablet.css
@@ -1,8 +1,15 @@
-.main-exchange {
+/* .main-exchange {
     padding-top: 100%;
     padding-bottom: 100%;
+} */
+.main-exchange--index {
+    width: 100%;
+    height: 25vw;
+    min-height: 360px;
+    padding-top: 9.6%;
+    padding-bottom: 29.7%;
+    text-align: center;
 }
-
 .main-exchange--main {
     width: 100%;
     height: 25vw;
