--- a/src/assets/styles/computer.css
+++ b/src/assets/styles/computer.css
@@ -1,18 +1,13 @@
 .main-exchange--index {
-    width: 100%;
-    height: auto;
-    padding-top: 1%;
-    padding-bottom: 2%;
+    padding-top: 8%;
+    padding-bottom: 28.5%;
 }
 .main-exchange--main {
-    width: 100%;
-    height: auto;
-    padding-top: 1%;
+    padding-top: 8%;
     padding-bottom: 2%;
 }
-/* textarea {
-    height: auto;
-    max-height: 100%;
-    min-height: 30%;
-
-} */
+textarea {
+    height: 100vh;
+    margin-top: 10px;
+    font-size: 2.5rem;
+}
