--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -38,7 +38,9 @@ main {
     position: relative;
     margin-top: 20px;
     padding: 5px;
-    height: 110px;
+    height: auto;
+    min-height: 80px;
+    max-height: 160px;
     width: 100%;
     max-width: 600px;
 }
@@ -46,8 +48,8 @@ textarea {
     background: transparent;
     border: none;
     width: 100%;
-    height: 70vh;
-    margin-top: 20px;
+    height: 20vh;
+    margin-top: 10px;
     color: #0A3871;
     font-size: 2rem;
     resize: none;
@@ -98,7 +100,7 @@ p {
     width: 100%;
     height: auto;
     padding-top: 12%;
-    padding-bottom: 20%;
+    padding-bottom: 12%;
     text-align: center;
 }
 .main-container {
