--- a/src/assets/styles/tablet.css
+++ b/src/assets/styles/tablet.css
@@ -1,7 +1,7 @@
-/* .main-exchange {
+.main-exchange {
     padding-top: 100%;
     padding-bottom: 100%;
-} */
+}
 .main-exchange--index {
     width: 100%;
     height: 25vw;
