--- a/src/assets/styles/stylesStart.css
+++ b/src/assets/styles/stylesStart.css
@@ -11,41 +11,61 @@
     display: flex;
     position: relative;
     width: 70%;
+    max-width: 400px;
     height: auto;
-    margin-top: 10%;
-    left: 20%;
+    margin-top: 8%;
+    left: 10%;
     padding: 5px;
 }
 #word-guess{
     height: 3em;
-}
-#word-guess span {
-    display: inline-block;
-    vertical-align: bottom;
-    width: 30px;
-    margin-right: 6px;
-    margin-top: 40px;
-    font-size: 2em;
-    text-align: center;
-    border-bottom: 2px solid #0a3871;
 }
 .container-word--guess {
     display: flex;
     flex-direction: column;
     position: relative;
     justify-content: center;
+    text-align: center;
     margin: 0;
     padding: 5px;
+}
+#word-guess span {
+    display: inline-block;
+    vertical-align: bottom;
+    justify-content: center;
+    width: 30px;
+    margin-right: 6px;
+    font-size: 2.5em;
+    text-align: center;
+    border-bottom: 2px solid #0a3871;
+}
+#start-game {
+    margin-top: 2px;
+    color: #E5E5E5;
+}
+#result {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    height: 15x;
+    padding: 5px;
+    top: 50px;
+    font-size: 28px;
+    color: #0a3871;
+
 }
 .container-letters {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 55px;
     gap: 9px;
 }
 #letters button{
     width: 28px;
     padding: 6px 0;
     text-align: center;
+}
+#end-game {
+    top: -15px;
 }
