--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -185,10 +185,111 @@ footer {
     width: 100%;
 }
 .derechos-autor {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-weight: 400;
     line-height: 1.8rem;
     list-style: none;
     color: #E5E5E5;
     text-align: center;
+}
+
+/* styles game */
+
+.main-image--change {
+    display: flex;
+    position: relative;
+    width: 70%;
+    max-width: 400px;
+    height: auto;
+    margin-top: 8%;
+    left: 10%;
+    padding: 5px;
+}
+#word-guess{
+    height: 3em;
+}
+.container-word--guess {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    margin: 0;
+    padding: 5px;
+}
+#word-guess span {
+    display: inline-block;
+    vertical-align: bottom;
+    justify-content: center;
+    width: 30px;
+    margin-right: 6px;
+    font-size: 2.5em;
+    text-align: center;
+    border-bottom: 2px solid #0a3871;
+}
+#result {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    height: 15x;
+    padding: 5px;
+    top: 50px;
+    font-size: 28px;
+    color: #0a3871;
+}
+.container-letters {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 55px;
+    gap: 9px;
+}
+#letters button{
+    width: 28px;
+    padding: 6px 0;
+    text-align: center;
+    font-size: 2rem;
+}
+.container-button--startend {
+    display: flex;
+    flex-direction: column;
+    gap: 2;
+    width: 100%;
+    width: auto;
+    margin: 0;
+    margin-top: 2px;
+    padding: 25px;
+}
+.main-container--start {
+    position: relative;
+    left: calc(50% - 118px);
+    justify-content: center;
+    display: block;
+    width: 229px;
+    height: 60px;
+    margin-top: 2px;
+    padding: 5px;
+    background: #0A3871;
+    border: none;
+    border-radius: 20px;
+    color: #E5E5E5;
+    font-size: 2rem;
+}
+.main-container--end {
+    position: relative;
+    left: calc(50% - 118px);
+    justify-content: center;
+    display: block;
+    margin-top: 10px;
+    padding: 5px;
+    width: 229px;
+    height: 60px;
+    background: #E5E5E5;
+    border: 1.5px solid;
+    border-radius: 20px;
+    color: #0A3871;
+    font-size: 2rem;
+}
+#end-game {
+    color: #0A3871;
 }
