--- a/src/assets/styles/stylesStart.css
+++ b/src/assets/styles/stylesStart.css
@@ -1,12 +1,3 @@
-/* .main-start-game {
-    width: 80%;
-    margin: auto;
-    padding: 20px;
-    background: rgba(255,255,255,.7);
-    display: flex;
-    gap: 30px;
-} para los media query*/
-
 .main-image--change {
     display: flex;
     position: relative;
@@ -39,10 +30,6 @@
     text-align: center;
     border-bottom: 2px solid #0a3871;
 }
-#start-game {
-    margin-top: 2px;
-    color: #E5E5E5;
-}
 #result {
     position: relative;
     text-align: center;
@@ -52,7 +39,6 @@
     top: 50px;
     font-size: 28px;
     color: #0a3871;
-
 }
 .container-letters {
     display: flex;
@@ -66,6 +52,44 @@
     padding: 6px 0;
     text-align: center;
 }
+.container-button--startend {
+    display: flex;
+    flex-direction: column;
+    gap: 2;
+    width: 100%;
+    width: auto;
+    margin: 0;
+    margin-top: 2px;
+    padding: 25px;
+}
+.main-container--start {
+    position: relative;
+    left: calc(50% - 118px);
+    justify-content: center;
+    display: block;
+    width: 229px;
+    height: 60px;
+    margin-top: 2px;
+    padding: 5px;
+    background: #0A3871;
+    border: none;
+    border-radius: 20px;
+    color: #E5E5E5;
+}
+.main-container--end {
+    position: relative;
+    left: calc(50% - 118px);
+    justify-content: center;
+    display: block;
+    margin-top: 10px;
+    padding: 5px;
+    width: 229px;
+    height: 60px;
+    background: #E5E5E5;
+    border: 1.5px solid;
+    border-radius: 20px;
+    color: #0A3871;
+}
 #end-game {
-    top: -15px;
+    color: #0A3871;
 }
