--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -233,8 +233,8 @@ footer {
     width: 100%;
     height: 15x;
     padding: 5px;
-    top: 50px;
-    font-size: 28px;
+    top: 25px;
+    font-size: 3.5rem;
     color: #0a3871;
 }
 .container-letters {
