Cargando funcionamiento para agregar palabras

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -18,6 +18,10 @@ header {
     top: 24px;
     left: -10px;
 }
+.li-palabras-anhadidas{
+    margin-left: 1em;
+    display: none;
+}
 main {
 	width: 100%;
 	height: auto;
