--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -8,6 +8,10 @@ html {
     font-size: 62.5%;
 }
 body {
+    position: relative;
+    padding-bottom: 3.5em;
+    min-height: 100vh;
+    margin: 0;
     background-color: #E5E5E5;
 }
 header {
@@ -67,10 +71,13 @@ textarea:focus {
 }
 .main-span {
     display: flex;
+    position: relative;
     width: 100%;
     height: auto;
     justify-content: center;
     text-align: center;
+    top: 20px;
+    left: -50px;
 }
 .main-span-vector {
     display: flex;
@@ -91,7 +98,10 @@ p {
     width: 100%;
     height: auto;
     padding: 5px;
-    font-size: 2rem;
+    font-size: 2.2rem;
+}
+.main-vector{
+    font-size: 1.2rem;
 }
 .main-exchange--index {
     width: 100%;
@@ -111,12 +121,7 @@ p {
     width: 100%;
     height: auto;
     padding: 5px;
-}
-.main-container {
-    width: 100%;
-    height: auto;
-    margin: auto;
-    padding: 0;
+    margin: 0;
 }
 .main-container--button {
     width: 100%;
@@ -137,12 +142,16 @@ p {
     border: none;
     border-radius: 20px;
 }
+#buttonSave {
+top: 10px;
+margin-top: 10px;
+}
 .buttonbotton{
     position: relative;
     left: calc(50% - 118px);
     top: 30px;
     display: block;
-    margin-top: 35px;
+    margin-top: 30px;
     padding: 15px;
     width: 229px;
     height: 60px;
@@ -150,6 +159,10 @@ p {
     border: 1.5px solid;
     border-radius: 20px;
     color: #0A3871;
+}
+#buttonGame {
+    top: 5px;
+    margin-top: 10px;
 }
 button :hover {
     color: orangered;
@@ -162,7 +175,12 @@ button:active {
     height: auto;
     margin: 10px;
 }
-.buttonbotton--cancelar {
+.buttonbotton--iniciar {
+    width: 10px;
+    height: auto;
+    margin: 10px;
+}
+.buttonbotton--borrar {
     width: 10px;
     height: auto;
     margin: 10px;
@@ -180,13 +198,18 @@ a {
     font-weight: bold;
     color: #0A3871;
 }
+#button-reset {
+    top: -40px;
+    margin-top: 50px;
+}
 footer {
     display: flex;
-    position: relative;
+    position: absolute;
+    bottom: 0;
     width: 100%;
     height: 70px;
     background-color: #0A3871;
-    padding: 5px;
+    padding: 1em 0;
 }
 .footer-copy {
     display: flex;
