--- a/src/assets/styles/tablet.css
+++ b/src/assets/styles/tablet.css
@@ -1,3 +1,6 @@
+#bodyStart {
+    padding-bottom: 6em;
+}
 .main-exchange {
     padding-top: 100%;
     padding-bottom: 100%;
@@ -8,13 +11,6 @@
     min-height: 360px;
     padding-top: 9.6%;
     padding-bottom: 29.7%;
-    text-align: center;
-}
-.main-exchange--main {
-    width: 100%;
-    height: 25vw;
-    padding-top: 0px;
-    padding-bottom: 35px;
     text-align: center;
 }
 .main-image--change {
@@ -60,4 +56,16 @@
     max-width: 70px;
     padding: 6px 0;
     text-align: center;
+}
+.main-span {
+    top: 30px;
+}
+#buttonSave {
+    top: 20px;
+}
+#buttonGame {
+    top: 20px;
+}
+#button-reset {
+    top: -20px;
 }
